--- a/statusbarhelper/build.gradle
+++ b/statusbarhelper/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.xiongms'
 
 android {
     compileSdkVersion 28
@@ -33,3 +35,4 @@ dependencies {
 
     implementation 'com.android.support:support-v4:28.0.0-rc01'
 }
+
